# cata

./: .clippy.toml  .mise.toml  Cargo.toml  README.md  justfile
.github/workflows/: ci.yaml
derive/: Cargo.toml  README.md
derive/src/: container.rs  file.rs  lib.rs
examples/basic/: Cargo.toml  README.md
examples/basic/src/: main.rs
examples/file/: Cargo.toml  README.md
examples/file/src/: main.rs
examples/output/: Cargo.toml  README.md
examples/output/src/: main.rs
examples/telemetry/: Cargo.toml
src/: command.rs  file.rs  lib.rs  output.rs  telemetry.rs
src/output/: tabled.rs
src/telemetry/: posthog.rs
