[package]
name = "cata"
version.workspace = true
authors.workspace = true
description = "toolkit for building large CLIs"
documentation.workspace = true
license-file.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[workspace.package]
version = "0.1.0"
authors = ["Thomas Rampelberg <thomas@saunter.org>"]
documentation = "https://docs.rs/cata"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/grampelberg/cata"
keywords = ["cli"]
categories = ["Command line utilities"]

[workspace.dependencies]
async-trait = "0.1.81"
clap = { version = "4.5.9", features = ["derive", "env"] }
eyre = "0.6.12"
serde = { version = "1.0.204", features = ["derive"] }
tabled = "0.15.0"
tokio = { version = "1.38.0", features = ["full"] }

[dependencies]
async-trait.workspace = true
cata-derive = { path = "derive" }
clap = { workspace = true }
eyre.workspace = true
futures = "0.3.30"
mime_guess = "2.0.5"
serde.workspace = true
serde_json = "1.0.120"
serde_path_to_error = "0.1.16"
serde_yaml = "0.9.34"
tabled.workspace = true

[workspace]
members = ["derive", "examples/basic", "examples/file", "examples/output"]

[workspace.lints.rust]
keyword-idents = "warn"
let-underscore = "warn"
rust-2024-compatibility = "warn"
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
cargo = "warn"
complexity = "warn"
correctness = "warn"
pedantic = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"
