[package]
name = "cata"
version.workspace = true
authors.workspace = true
description = "toolkit for building large CLIs"
documentation.workspace = true
license-file.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[workspace.package]
version = "0.1.1"
authors = ["Thomas Rampelberg <thomas@saunter.org>"]
documentation = "https://docs.rs/cata"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/grampelberg/cata"
keywords = ["cli"]
categories = ["command-line-interface"]

[workspace.dependencies]
async-trait = "0.1.81"
clap = { version = "4.5.9", features = ["derive", "env"] }
eyre = "0.6.12"
serde = { version = "1.0.204", features = ["derive"] }
tabled = "0.15.0"
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3.30"
machine-uid = "0.5.2"
mime_guess = "2.0.5"
posthog-rs = "0.2.2"
proc-macro2 = "1.0.86"
quote = "1.0.36"
ring = "0.17.8"
serde_json = "1.0.120"
serde_path_to_error = "0.1.16"
serde_yaml = "0.9.34"
syn = "2.0.70"
tracing = "0.1.40"
tracing-core = "0.1.32"
tracing-subscriber = "0.3.18"
uuid = "1.10.0"

[dependencies]
async-trait.workspace = true
cata-derive = { path = "derive", version = "0.1.0" }
clap = { workspace = true }
eyre.workspace = true
futures = { workspace = true }
machine-uid = { workspace = true }
mime_guess = { workspace = true }
posthog-rs = { workspace = true }
ring = { workspace = true }
serde.workspace = true
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
serde_yaml = { workspace = true }
tabled.workspace = true
tokio = { workspace = true }
tracing = { workspace = true }
tracing-core = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "matchers",
    "once_cell",
    "tracing",
] }
uuid = { workspace = true }

[workspace]
members = ["derive", "examples/basic", "examples/file", "examples/output"]

[lints]
workspace = true

[profile.dev]
debug = 0
split-debuginfo = "unpacked"

[workspace.lints.rust]
missing_docs = "warn"
keyword-idents = "warn"
let-underscore = "warn"
rust-2024-compatibility = "warn"
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
multiple_crate_versions = "warn"
cargo = "warn"
complexity = "warn"
correctness = "warn"
pedantic = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"
missing_errors_doc = "allow"
