[package]
name = "cata-derive"
description = "procedural macros to derive traits for CLI construction"
version.workspace = true
authors.workspace = true
documentation.workspace = true
license-file.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
eyre = { workspace = true }
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = { version = "2.0.70", features = ["visit"] }

[lib]
proc-macro = true

[lints]
workspace = true
