[package]
name = "cata-derive"
description = "procedural macros to derive traits for CLI construction"
version = "0.1.0"
authors.workspace = true
documentation.workspace = true
license-file.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
eyre = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["visit"] }

[lib]
proc-macro = true

[lints]
workspace = true
