[package]
name = "file"
description = "file example of using cata"
version.workspace = true
authors.workspace = true

documentation.workspace = true
license-file.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
async-trait.workspace = true
cata = { version = "0.1.0", path = "../.." }
clap.workspace = true
eyre.workspace = true
serde.workspace = true
tokio.workspace = true
